Fix: vertical spacing in error/updated boxes

--- a/css/backend.css
+++ b/css/backend.css
@@ -42,6 +42,12 @@ div.rpbchessboard-sourceCode:last-child,
 	margin-bottom: 0px;
 }
 
+.rpbchessboard-adminPage .error p,
+.rpbchessboard-adminPage .updated p {
+	padding-top   : 0.5em;
+	padding-bottom: 0.5em;
+}
+
 
 
 /******************************************************************************/
